--- a/public/order-details.html
+++ b/public/order-details.html
@@ -22,12 +22,23 @@
             text-align: center;
             margin-bottom: 20px;
         }
+        .container {
+            max-width: 600px; /* Adjust as needed to make it half of the current size */
+            margin: 0 auto; /* Center the container horizontally */
+            padding: 20px;
+            position: relative; /* Make the container a reference for absolute positioning */
+        }
+
         .order-details {
             background-color: rgba(37, 36, 36, 0.8); /* Semi-transparent white background */
             border-radius: 8px;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px; /* Add margin to create space between order details and home button */
         }
+
+
+
         .order-details p {
             margin-bottom: 10px;
         }
@@ -76,7 +87,7 @@
 
     <!-- Add the GIF at the bottom of the page -->
     <div class="gif-container">
-        <img src="oderontheway.gif" alt="GIF" width="320" height="220" >
+        <img src="ordergifff.gif" alt="GIF" width="320" height="220" >
     </div>
     
     <script>
